--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 # Created by https://www.gitignore.io/api/go,linux,macos,windows,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=go,linux,macos,windows,visualstudiocode
 
+### MY PROJECT ###
+/output/
+
 ### Go ###
 # Binaries for programs and plugins
 *.exe
